# harry-claude-testpack

./: INTEGRATION_GUIDE.md  README.md  mcp-manifest.json  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/commands/: add-test.md  generate-api-test.md  generate-api-tests.md  generate-report.md  generate-ui-test.md  generate-ui-tests.md  run-api-tests.md  run-ui-tests.md
.claude/hooks/: automation-hook.md  automation-lifecycle.md
.claude/hooks/reporting/: README.md  report-generator.py
.claude/skills/api-testing/: skill.md
.claude/skills/test-data-setup/: skill.md
.claude/skills/ui-navigation/: skill.md
ai_generation/: analysis.py
api_tests/: conftest.py  test_example_api.py
api_tests/helpers/: api_helpers.py
demo_repo/: README.md
demo_repo/.claude/: CLAUDE.md
demo_repo/.claude/commands/: add-test.md  generate-api-test.md  generate-report.md  generate-ui-test.md  run-api-tests.md  run-ui-tests.md
demo_repo/.claude/hooks/: automation-lifecycle.md
demo_repo/api_tests/: conftest.py
demo_repo/playwright/: package.json  playwright.config.ts
demo_repo/scripts/: run_automation.py
playwright/: package.json  playwright.config.ts
playwright/page-objects/: base-page.ts  example-page.ts
playwright/tests/: example-flow.spec.ts
scripts/: generate_test_artifacts.py
src/claude_test_scaffold/: __init__.py  cli.py
src/claude_test_scaffold.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
templates/: api_contract_test_template.md  ui_component_test_template.md
tests/: test_cli.py
(+5 files in other folders)
