[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-test-scaffold"
version = "0.1.0"
description = "Installable Claude test automation scaffolding for UI and API testing"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
claude-test-scaffold = "claude_test_scaffold.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
